// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioSummaryCard renders correctly with large values 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 8,
      "elevation": 3,
      "margin": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
>
  <Text
    style={
      {
        "color": "#333",
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 12,
      }
    }
  >
    Portfolio Summary
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Weighted Avg Cost:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      R 1 000.00
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Total Shares:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      1 000 shares
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Cash Balance:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      R 2 500 000.00
    </Text>
  </View>
</View>
`;

exports[`PortfolioSummaryCard renders correctly with sample data 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 8,
      "elevation": 3,
      "margin": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOpacity": 0.1,
      "shadowRadius": 6,
    }
  }
>
  <Text
    style={
      {
        "color": "#333",
        "fontSize": 18,
        "fontWeight": "bold",
        "marginBottom": 12,
      }
    }
  >
    Portfolio Summary
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Weighted Avg Cost:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      R 50.00
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Total Shares:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      110 shares
    </Text>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#555",
          "fontSize": 14,
        }
      }
    >
      Cash Balance:
    </Text>
    <Text
      style={
        {
          "color": "#000",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      R 500.00
    </Text>
  </View>
</View>
`;
